@@ -1,3 +1,4 @@
+(2001/05/30 - duell) invname database issue fix.
 (2001/05/20 - garret)  Fixed some mishaps in ocs.
 (2001/04/30 - broeker) Fixed signed char casting bug in dicode compression. 
 	               Encapsulated dicode compression idioms into macros
